<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GrumpActivity" >

    <TextView
        android:id="@+id/textViewServiceStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#44CCCCCC"
        android:clickable="false"
        android:lines="3"
        android:text=""
        android:textAlignment="center"
        android:textStyle="bold" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@id/textViewServiceStatus"
        android:layout_marginTop="4dip"
        android:background="#88533410" />

    <TextView
        android:id="@+id/textViewMinimumCheckRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/separator"
        android:layout_below="@id/separator"
        android:layout_marginTop="20dip"
        android:text="@string/minimumCheckRate"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewMaximumCheckRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textViewMinimumCheckRate"
        android:layout_alignBottom="@id/textViewMinimumCheckRate"
        android:layout_alignRight="@id/textViewServiceStatus"
        android:text="@string/maximumCheckRate"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewCurrentCheckRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textViewMinimumCheckRate"
        android:layout_alignBottom="@id/textViewMinimumCheckRate"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="false"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textViewMinimumCheckRate"
        android:layout_below="@id/textViewMinimumCheckRate" />

    <Button
        android:id="@+id/buttonToggleService"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBar"
        android:layout_below="@+id/seekBar"
        android:layout_marginTop="20dip"
        android:text="@string/toggleService" />

    <TextView
        android:id="@+id/textViewSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/buttonToggleService"
        android:layout_below="@id/buttonToggleService"
        android:layout_marginTop="20dip"
        android:text="@string/textViewSound" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/buttonToggleService"
        android:layout_below="@id/textViewSound"
        android:layout_marginTop="4dip"
        android:background="#44CCCCCC"
        android:checkedButton="@+id/radioDefault" >

        <RadioButton
            android:id="@+id/radioNoJon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioNoJon" />

        <RadioButton
            android:id="@+id/radioGrumps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioGrumps" />

        <RadioButton
            android:id="@id/radioDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioDefault" />
    </RadioGroup>

</RelativeLayout>